Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137769

Keyboard is not closed when TextEdit loses focus while using TalkBack

XMLWordPrintable

    • Android
    • e7a211d70 (dev), 07f3b9caf (6.10), e4cd1648a (6.9), 72d41f878 (tqtc/lts-6.8)

      When moving the TalkBack focus away from a TextEdit by swiping right, the focus frame moves, but the Keyboard stays open.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            timonsassor Timon Sassor
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes