Android: Use the TalkBack focus signal to trigger focusAction

TalkBack provides A11y specific focus signals that are emitted when
the focus frame is moved. It would be useful to pass this focus
change to the focused property of an item.

[ChangeLog][Accessibility][Android] Use TalkBack
ACTION_ACCESSIBILITY_FOCUS to trigger focusAction.

Fixes: QTBUG-137769
Pick-to: 6.8
Change-Id: I63219cfb9b8776ddaa6c85ccf1844adb1984d2b7
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit e7a211d702d6aa21a30eff56ceeffc153385443e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 07f3b9caf85c8a4ca431417b168ba93a79995435)